# voyager-verifier

./: .gitignore  .voyager.toml.example  ACCOMPLISHMENTS.md  CHANGELOG.md  Cargo.toml  FOUNDRY_INTEGRATION.md  Makefile  Phoenix Voyager  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  package.yml  release.yml  test.yml
crates/voyager/: Cargo.toml
crates/voyager-verifier/: Cargo.toml
crates/voyager-verifier/src/: errors.rs  lib.rs  voyager.rs
crates/voyager-verifier/src/api/: client.rs  errors.rs  mod.rs
crates/voyager-verifier/src/core/: class_hash.rs  mod.rs  project.rs
crates/voyager-verifier/src/filesystem/: collector.rs  resolver.rs
crates/voyager-verifier/src/storage/: history.rs
crates/voyager-verifier/tests/: error_message_tests.rs  integration_tests.rs
crates/voyager/src/: errors.rs  file_collector.rs  main.rs  project_detection.rs  verification.rs
crates/voyager/src/cli/: args.rs  wizard.rs
crates/voyager/src/cli/commands/: check.rs  history.rs  status.rs  verify.rs
crates/voyager/src/output/: notifications.rs  status.rs
crates/voyager/src/storage/: history.rs
docs/src/getting-started/: README.md  cargo.md
src/: args.rs  class_hash.rs  config.rs  errors.rs  file_collector.rs  history.rs  history_commands.rs  lib.rs  main.rs  notifications.rs  project.rs  resolver.rs  status_commands.rs  status_output.rs  verification.rs  verify_commands.rs  wizard.rs
src/api/: client.rs  errors.rs  models.rs
src/cli/: args.rs
src/output/: status.rs
src/storage/: history.rs
tests/: error_message_tests.rs
