[workspace]
members = [
    "crates/voyager",
    "crates/voyager-verifier",
]
default-members = ["crates/voyager"]
resolver = "2"

[workspace.package]
authors = ["Nethermind"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NethermindEth/voyager-verifier"
version = "2.3.0"

[workspace.dependencies]
anyhow = "1.0"
assert_fs = "1.1.3"
backon = { version = "1.6", default-features = false, features = ["std-blocking-sleep"] }
camino = { version = "1.2", features = ["serde1"] }
chrono = "0.4"
clap = { version = "4.6", features = ["derive", "unicode", "env", "string"] }
colored = "3.1.1"
dialoguer = "0.12.0"
dirs = "6.0"
env_logger = "0.11"
itertools = "0.14"
lazy_static = "1.5"
log = "0.4"
mockito = "1.7.2"
notify-rust = "4.15"
predicates = "3.1.4"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "native-tls-vendored"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
scarb-metadata = "1.15"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.20"
spdx = "0.13"
tempfile = "3.27.0"
thiserror = "2.0"
tokio-test = "0.4.5"
toml = "1.1"
url = "2.5"
walkdir = "2.5"
