[package]
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
description = "Reusable library for preparing and submitting Starknet contract class verification requests to Voyager."
edition.workspace = true
keywords = ["starknet", "verification", "smart-contracts", "ethereum"]
license.workspace = true
name = "voyager-verifier"
readme.workspace = true
repository.workspace = true
version.workspace = true
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/build.rs",
]

[package.metadata.cargo-package-metadata]
ignored-files = [
    "Cargo.lock",
    "Cargo.toml.orig",
    ".cargo_vcs_info.json",
    ".github/",
    "examples/",
    "Dockerfile",
    "Makefile",
    ".cargo/",
    "rust-toolchain",
    ".gitignore",
]

[dependencies]
anyhow.workspace = true
backon.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
dialoguer.workspace = true
dirs.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
notify-rust = { workspace = true, optional = true }
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
scarb-metadata.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
spdx.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true
walkdir.workspace = true

[features]
default = ["notifications"]
notifications = ["notify-rust"]

[dev-dependencies]
assert_fs.workspace = true
mockito.workspace = true
predicates.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
